--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,8 @@
     <link rel="stylesheet" href="css/ons.css" />
     
     <link rel="stylesheet" href="css/controller_target.css" />
+    <link rel="stylesheet" href="css/controller_learn_flashcard.css" />
+    <link rel="stylesheet" href="css/controller_note.css" />
     <link rel="stylesheet" href="css/controller_test_select.css" />
 
     <title>{{ 'TITLE' | translate }}</title>
