1128 嗯，接下來來玩同步 close #44 最後整理learn_flashcard_transition.html 跟 test_select_transition.html #37 分離CSS 做到一半，但先這樣吧

--- a/www/setting.html
+++ b/www/setting.html
@@ -4,7 +4,7 @@
         <div class="left">
             <ons-toolbar-button ng-click="app.menu.open()" class="menu-open">
                 <span class="toolbar-button--quiet navigation-bar__line-height" >
-                    <i class="ion-navicon"></i>
+                    <ons-icon icon="ion-navicon" fixed-width="true"></ons-icon>
                 </span>
             </ons-toolbar-button>
         </div>
