--- a/www/test_select_transition.html
+++ b/www/test_select_transition.html
@@ -1,5 +1,5 @@
 <ons-page id="test_select_transition_html" 
-          class="test-select"
+          class="test-select-page"
           ng-init="_test_select = ctl_test_select.var.test_select_transition">
 
     <ons-toolbar>
@@ -7,7 +7,7 @@
         <div class="left">
             <ons-toolbar-button class="menu-open">
                 <span class="toolbar-button--quiet navigation-bar__line-height" >
-                    <i class="ion-navicon"></i>
+                    <ons-icon icon="ion-navicon" fixed-width="true"></ons-icon>
                 </span>
             </ons-toolbar-button>
         </div>
@@ -25,8 +25,9 @@
 
     <div class="question">
         
-        <i class="ion-radio-waves hide speak"></i>
+        <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak hide"></ons-icon>
         {{ _test_select.question }}
+        <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
         
     </div>
 
