--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -1,58 +1,70 @@
-<ons-page id="learn_flashcard_transition_html">
+<ons-page id="learn_flashcard_transition_html" 
+          class="learn-flashcard-page">
     <ons-toolbar>
         <div class="left">
-            <ons-toolbar-button ng-click="app.menu.open()" class="menu-open">
+            <ons-toolbar-button class="menu-open">
                 <span class="toolbar-button--quiet navigation-bar__line-height" >
-                    <i class="ion-navicon"></i>
+                    <ons-icon icon="ion-navicon" fixed-width="true"></ons-icon>
                 </span>
             </ons-toolbar-button>
         </div>
 
-        <div class="center">單字學習</div>
+        <div class="center">
+            {{ 'LEARN_FLASHCARD_TITLE' | translate }}
+        </div>
 
-        <div class="right" style="line-height: 44px;" 
+        <div class="right" 
              ng-init="_target_data = ctl_target.status.learn_flashcard" 
-             ng-class="{'target-completed': (_target_data.done > _target_data.target-1)}">
+             ng-class="{'target-completed': (_target_data.done > _target_data.target - 1)}">
             {{ _target_data.done}} / {{ _target_data.target}}
         </div>
 
     </ons-toolbar>
 
-    <div class="flashcard" style="margin: 0 1rem; border: 1px solid #DDD; border-radius: 4px;">
-        <ons-row class="q"
-                 style="padding:1rem; text-align: center;display: block;background-color: white; cursor: pointer">
-            <i class="ion-radio-waves hide" style="float:left;font-size: 1.5rem;margin-right: 0.5rem;color:#999;visibility: hidden;"></i>
+    <div class="flashcard">
+
+        <!-- 英文的部分 -->
+        <ons-row class="side q">
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak"></ons-icon>
             {{ ctl_learn_flashcard.var.learn_flashcard_transition.q}}
-            <i class="ion-radio-waves" style="float:right;font-size: 1.5rem;margin-right: 0.5rem;color:#999"></i>
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
         </ons-row>
-        <ons-row class="a"
-                 style="border-top: 1px solid #DDD; background-color: #EEE;padding: 1rem;text-align: center;display: block;cursor: pointer" >
-            <i class="ion-radio-waves hide" style="float:left;font-size: 1.5rem;margin-right: 0.5rem;color:#999;visibility: hidden;"></i>
+        <ons-row class="side a">
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak"></ons-icon>
             {{ ctl_learn_flashcard.var.learn_flashcard_transition.a}}
-            <i class="ion-radio-waves" style="float:right;font-size: 1.5rem;margin-right: 0.5rem;color:#999"></i>
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
         </ons-row>
     </div>
 
-    <div class="note"
-         style=" margin:1rem;   padding: 1rem;  border-radius: 4px;border: 1px solid #ddd; cursor: pointer;
-         background-color: #f9f9f9;max-height: 10rem; overflow-y: auto;">
-        <div style="clear: both;">
-            <i class="ion-compose" style="float:left;font-size: 2rem;margin-right: 0.5rem;"></i>
-            {{ ctl_learn_flashcard.var.learn_flashcard_transition.note}}
-        </div>
+    <div class="note">
+        <ons-icon icon="ion-compose" fixed-width="true" class="compose"></ons-icon>
 
-        <span class="notification" style="float: right;margin-top: 0.5rem;">
-            其他人的筆記:
-            {{ ctl_learn_flashcard.var.learn_flashcard_transition.other_note_count}}
+        <span class="your-note pre" 
+              ng-show="(ctl_learn_flashcard.var.learn_flashcard_transition.note !== null)">{{ ctl_learn_flashcard.var.learn_flashcard_transition.note}}</span>
+
+        <span class="note-empty" 
+              ng-show="(ctl_learn_flashcard.var.learn_flashcard_transition.note === null)">
+            {{ 'LEARN_FLASHCARD_NOTE_EMPTY' | translate }}
+        </span>
+
+    </div>
+
+    <div class="notification">
+        <span class="load-icon">
+            <ons-icon icon="ion-load-a"></ons-icon>
+        </span>
+        <span class="notification-text">
+            {{ 'LEARN_FLASHCARD_OTHER_NOTE' | translate }}
+            <span class="count"></span>
         </span>
     </div>
 
     <ons-tabbar>
-        <ons-tab label="上一個單字" icon="ion-arrow-up-b"
+        <ons-tab label="{{ 'LEARN_FLASHCARD_GO_PREV' | translate }}" icon="ion-arrow-up-b"
                  ng-show="(ctl_learn_flashcard.status.history_index > 0)"></ons-tab>
-        <ons-tab label="進入測驗" icon="ion-ios-compose" 
+        <ons-tab label="{{ 'LEARN_FLASHCARD_GO_TEST' | translate }}" icon="ion-ios-compose" 
                  ng-show="(ctl_activity.is_learn_enough() === true)"></ons-tab>
-        <ons-tab label="下一個單字" icon="ion-arrow-down-b" active="true"></ons-tab>
+        <ons-tab label="{{ 'LEARN_FLASHCARD_GO_NEXT' | translate }}" icon="ion-arrow-down-b" active="true"></ons-tab>
     </ons-tabbar>
 
 </ons-page>
