--- a/www/target_view.html
+++ b/www/target_view.html
@@ -4,7 +4,7 @@
 
         <div class="right" ng-click="app.navi.pushPage('target_edit.html')">
             <ons-toolbar-button>
-                <i class="icon ion-edit"></i>
+                <ons-icon icon="ion-edit" fixed-width="true"></ons-icon>
             </ons-toolbar-button>
         </div>
     </ons-toolbar>
