1128 再來處理按鈕 把單一確認bar按鈕的換成tabbar close #60

--- a/www/target_view_page.html
+++ b/www/target_view_page.html
@@ -1,4 +1,5 @@
-<ons-page id="target_view_html" class="target-page" ng-device-backbutton="main_back()">
+<ons-page id="target_view_html" class="target-page" 
+          ng-device-backbutton="main_back()">
     <ons-toolbar>
         <div class="center">{{ ctl_target.get_view_title()}}</div>
 
@@ -8,6 +9,8 @@
             </ons-toolbar-button>
         </div>
     </ons-toolbar>
+    
+    <!-- ======================================= -->
 
     <ons-list modifier="inset">
         <ons-list-item ng-repeat="data in ctl_target.status" ng-class="{completed: data.done > data.target}">
@@ -24,11 +27,11 @@
         </ons-list-item>
     </ons-list>
 
-    <!----------------------------------------->
+    <!-- ======================================= -->
 
     <ons-modal var="target_help_modal" ng-click="target_help_modal.hide()">
-        <img src="{{ target_help.help_img}}" />
-        <div style="margin: 1rem;white-space: pre;">{{ target_help.help}}</div>
+        <img src="{{ ctl_target.var.target_help.help_img}}" />
+        <div style="margin: 1rem;white-space: pre;">{{ ctl_target.var.target_help.help}}</div>
         <ons-button>{{ "ONS_OK" | translate }}</ons-button>
     </ons-modal>
 </ons-page>
