--- a/www/target_edit.html
+++ b/www/target_edit.html
@@ -1,8 +1,12 @@
-<ons-page id="target_edit_html" class="target-page" ng-device-backbutton="$($event.target).find('.button-ok').click()">
-    <form ng-submit="ctl_target.set_target($event);app.navi.popPage()">
+<ons-page id="target_edit_html" class="target-page" 
+          ng-device-backbutton="$($event.target).find('.button-ok').click()">
+    <form ng-submit="ctl_target.set_target($event);
+            app.navi.popPage()">
         <ons-toolbar>
             <div class="center">{{ ctl_target.get_set_title()}}</div>
         </ons-toolbar>
+
+        <!-- ======================================= -->
 
         <ons-list modifier="inset">
             <ons-list-item ng-repeat="data in ctl_target.status">
@@ -26,17 +30,18 @@
             </ons-list-item>
         </ons-list>
 
-        <div class="bottom-bar bottom-bar-button">
-            <div class="bottom-bar__line-height button-ok" onclick="$(this).parents('form').submit();">
-                {{ "ONS_OK" | translate }}
-            </div>
-        </div>
+        <!-- ======================================= -->
 
-        <!----------------------------------------->
+        <ons-tabbar>
+            <ons-tab label="{{ 'ONS_OK' | translate }}" 
+                     onclick="$(this).parents('form').submit();"></ons-tab>
+        </ons-tabbar>
+
+        <!-- ======================================= -->
 
         <ons-modal var="target_help_modal" ng-click="target_help_modal.hide()">
-            <img src="{{ target_help.help_img}}" />
-            <div style="margin: 1rem;white-space: pre;">{{ target_help.help}}</div>
+            <img src="{{ ctl_target.var.target_help.help_img}}" />
+            <div style="margin: 1rem;white-space: pre;">{{ ctl_target.var.target_help.help}}</div>
             <ons-button>{{ "ONS_OK" | translate }}</ons-button>
         </ons-modal>
     </form>
