--- a/www/target_recommend.html
+++ b/www/target_recommend.html
@@ -1,15 +1,19 @@
-<ons-page id="target_recommend_html" class="target-page" ng-device-backbutton="$($event.target).find('.button-ok').click()">
-    <form ng-submit="ctl_target.set_target($event);ctl_activity.enter_from_target();">
+<ons-page id="target_recommend_html" class="target-page" 
+          ng-device-backbutton="$($event.target).find('.button-ok').click()">
+    <form ng-submit="ctl_target.set_target($event);
+            ctl_activity.enter_from_target();">
         <ons-toolbar>
             <div class="center">{{ ctl_target.get_set_title()}}</div>
         </ons-toolbar>
 
+        <!-- ======================================= -->
+
         <ons-list modifier="inset">
             <ons-list-item ng-repeat="data in ctl_target.status">
                 <ons-row ng-init="setting = ctl_target.var.target_setting[$index];
-                    last_done = ctl_target.var.recommend_target_data[setting.key].last_done;
-                    last_target = ctl_target.var.recommend_target_data[setting.key].last_target;
-                    recommend_target = ctl_target.var.recommend_target_data[setting.key].recommend_target;">
+                            last_done = ctl_target.var.recommend_target_data[setting.key].last_done;
+                            last_target = ctl_target.var.recommend_target_data[setting.key].last_target;
+                            recommend_target = ctl_target.var.recommend_target_data[setting.key].recommend_target;">
                     <ons-col class="title" ng-click="ctl_target.show_help(setting.key)">
                         {{ setting.title}}
                         <ons-icon icon="ion-ios-help-outline" fixed-width="true"></ons-icon>
@@ -19,7 +23,7 @@
                         <ons-icon icon="ion-ios-minus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, -1)"></ons-icon>
                         <input min="{{ setting.min}}" max="{{ setting.max}}" type="number" 
-                               value="{{ recommend_target }}"
+                               value="{{ recommend_target}}"
                                target_key="{{setting.key}}"
                                style="width: 3rem;font-size: 1rem;text-align: center;" />
                         <ons-icon icon="ion-ios-plus-outline" fixed-width="true" 
@@ -29,29 +33,30 @@
                 <ons-row style="border-top: 1px dashed #ddd;">
                     <ons-col width="50%" class="yesterday-target-status" style="text-align: center;">
                         昨天的進度: 
-                        {{ last_done }}
+                        {{ last_done}}
                         /
-                        {{ last_target }}
+                        {{ last_target}}
                     </ons-col>
                     <ons-col width="50%" class="recommend-target" style="text-align: center;">
                         推薦的目標: 
-                        {{ recommend_target }}
+                        {{ recommend_target}}
                     </ons-col>
                 </ons-row>
             </ons-list-item>
         </ons-list>
 
-        <div class="bottom-bar bottom-bar-button">
-            <div class="bottom-bar__line-height button-ok" onclick="$(this).parents('form').submit();">
-                {{ "ONS_OK" | translate }}
-            </div>
-        </div>
+        <!-- ======================================= -->
 
-        <!----------------------------------------->
+        <ons-tabbar>
+            <ons-tab label="{{ 'ONS_OK' | translate }}" 
+                     onclick="$(this).parents('form').submit();"></ons-tab>
+        </ons-tabbar>
+
+        <!-- ======================================= -->
 
         <ons-modal var="target_help_modal" ng-click="target_help_modal.hide()">
-            <img src="{{ target_help.help_img}}" />
-            <div style="margin: 1rem;white-space: pre;">{{ target_help.help}}</div>
+            <img src="{{ ctl_target.var.target_help.help_img}}" />
+            <div style="margin: 1rem;white-space: pre;">{{ ctl_target.var.target_help.help}}</div>
             <ons-button>{{ "ONS_OK" | translate }}</ons-button>
         </ons-modal>
     </form>
