--- a/www/target_view.html
+++ b/www/target_view.html
@@ -1,4 +1,5 @@
-<ons-page id="target_view_html" class="target-page" ng-device-backbutton="$($event.target).find('.button-ok').click()">
+<ons-page id="target_view_html" class="target-page" 
+          ng-device-backbutton="$($event.target).find('.button-ok').click()">
     <ons-toolbar>
         <div class="center">{{ ctl_target.get_view_title()}}</div>
 
@@ -8,6 +9,8 @@
             </ons-toolbar-button>
         </div>
     </ons-toolbar>
+
+    <!-- ======================================= -->
 
     <ons-list modifier="inset">
         <ons-list-item ng-repeat="data in ctl_target.status" ng-class="{completed: data.done > data.target}">
@@ -24,27 +27,23 @@
         </ons-list-item>
     </ons-list>
 
-    <div class="bottom-bar bottom-bar-button" 
-         ng-click="ctl_activity.enter_from_target();"
-         ng-show="ctl_target.var.use_pop_page === false">
-        <div class="bottom-bar__line-height button-ok">
-            {{ "ONS_OK" | translate }}
-        </div>
-    </div>
-    
-    <div class="bottom-bar bottom-bar-button" 
-         ng-click="ctl_target.exit_from_view()"
-         ng-show="ctl_target.var.use_pop_page === true">
-        <div class="bottom-bar__line-height button-ok">
-            {{ "ONS_OK" | translate }}
-        </div>
-    </div>
+    <!-- ======================================= -->
 
-    <!----------------------------------------->
+    <ons-tabbar>
+        <ons-tab label="{{ 'ONS_OK' | translate }}" 
+                 ng-click="ctl_activity.enter_from_target();"
+                 ng-show="ctl_target.var.use_pop_page === false"></ons-tab>
+        <ons-tab label="{{ 'ONS_OK' | translate }}" 
+                 ng-click="ctl_target.exit_from_view()"
+                 ng-show="ctl_target.var.use_pop_page === true"></ons-tab>
+    </ons-tabbar>
+
+    <!-- ======================================= -->
 
     <ons-modal var="target_help_modal" ng-click="target_help_modal.hide()">
-        <img src="{{ target_help.help_img}}" />
-        <div style="margin: 1rem;white-space: pre;">{{ target_help.help}}</div>
+        <img src="{{ ctl_target.var.target_help.help_img}}" />
+        <div style="margin: 1rem;white-space: pre;">{{ ctl_target.var.target_help.help}}</div>
         <ons-button>{{ "ONS_OK" | translate }}</ons-button>
     </ons-modal>
+
 </ons-page>
