1128 處理bug menu close #61

--- a/www/index.html
+++ b/www/index.html
@@ -122,7 +122,7 @@ app.config(function ($translateProvider) {
 
 var _app_controller = function ($scope, $filter) {
 
-    _app_factory_config($scope);
+    app_config($scope);
 
     _app_factory_db_utils($scope);
     cordova_utils($scope);
