--- a/www/target_edit.html
+++ b/www/target_edit.html
@@ -19,9 +19,9 @@
                     <ons-col width="50" style="text-align: right">
                         <ons-icon icon="ion-ios-minus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, -1)"></ons-icon>
-                        <input min="{{ setting.min}}" max="{{ setting.max}}" type="number" 
+                        <input min="{{ setting.min}}" max="{{ ctl_target.get_max_target() }}" type="number" 
                                value="{{ data.target}}"
-                               target_key="{{setting.key}}"
+                               target_key="{{ setting.key }}"
                                style="width: 3rem;font-size: 1rem;text-align: center;" />
                         <ons-icon icon="ion-ios-plus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, 1)"></ons-icon>
