--- a/www/menu.html
+++ b/www/menu.html
@@ -1,5 +1,5 @@
 <ons-page modifier="menu-page" id="menu_html"> 
-    <ons-row>
+    <ons-row class="target-status" style="cursor: pointer;">
 
         <div class="left" style="padding: 0.5rem; font-size: 12pt;" 
              ng-click="ctl_target.enter_from_menu();menu_click($event);">
@@ -30,7 +30,7 @@
 
         <ons-list-item ng-click="ctl_learn_flashcard.enter(false);
                            menu_click($event);">
-            <ons-icon icon="ios-browsers-outline" fixed-width="true"></ons-icon>
+            <ons-icon icon="ion-ios-browsers-outline" fixed-width="true"></ons-icon>
             <span class="menu-label">
                 {{ 'LEARN_FLASHCARD_TITLE' | translate }}
             </span>
