--- a/www/target_recommend.html
+++ b/www/target_recommend.html
@@ -9,11 +9,11 @@
         <!-- ======================================= -->
 
         <ons-list modifier="inset">
-            <ons-list-item ng-repeat="data in ctl_target.status">
-                <ons-row ng-init="setting = ctl_target.var.target_setting[$index];
-                            last_done = ctl_target.var.recommend_target_data[setting.key].last_done;
-                            last_target = ctl_target.var.recommend_target_data[setting.key].last_target;
-                            recommend_target = ctl_target.var.recommend_target_data[setting.key].recommend_target;">
+            <ons-list-item ng-repeat="data in ctl_target.status" 
+                           ng-init="setting = ctl_target.var.target_setting[$index];
+                            recommend = ctl_target.var.recommend_target_data[setting.key];"
+                         ng-show="ctl_target.get_max_target(setting.key) > 0">
+                <ons-row>
                     <ons-col class="title" ng-click="ctl_target.show_help(setting.key)">
                         {{ setting.title}}
                         <ons-icon icon="ion-ios-help-outline" fixed-width="true"></ons-icon>
@@ -22,8 +22,8 @@
                     <ons-col width="50" style="text-align: right">
                         <ons-icon icon="ion-ios-minus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, -1)"></ons-icon>
-                        <input min="{{ setting.min}}" max="{{ setting.max}}" type="number" 
-                               value="{{ recommend_target}}"
+                        <input min="{{ setting.min}}" max="{{ ctl_target.get_max_target(setting.key) }}" type="number" 
+                               value="{{ recommend.recommend_target}}"
                                target_key="{{ setting.key }}"
                                style="width: 3rem;font-size: 1rem;text-align: center;" />
                         <ons-icon icon="ion-ios-plus-outline" fixed-width="true" 
@@ -31,15 +31,19 @@
                     </ons-col>
                 </ons-row>
                 <ons-row style="border-top: 1px dashed #ddd;">
-                    <ons-col width="50%" class="yesterday-target-status" style="text-align: center;">
+                    <ons-col class="yesterday-target-status" style="text-align: center;">
                         昨天的進度: 
-                        {{ last_done}}
+                        {{ recommend.last_done }}
                         /
-                        {{ last_target}}
+                        {{ recommend.last_target }}
                     </ons-col>
-                    <ons-col width="50%" class="recommend-target" style="text-align: center;">
+                    <ons-col class="yesterday-target-status" style="text-align: center;">
+                        未完成的數量: 
+                        {{ ctl_target.get_remained_target(setting.key) }}
+                    </ons-col>
+                    <ons-col class="recommend-target" style="text-align: center;">
                         推薦的目標: 
-                        {{ recommend_target }}
+                        {{ recommend.recommend_target }}
                     </ons-col>
                 </ons-row>
             </ons-list-item>
