--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -15,7 +15,8 @@
 
         <div class="right" 
              ng-init="_target_data = ctl_target.status.learn_flashcard" 
-             ng-class="{'target-completed': (_target_data.done > _target_data.target - 1)}">
+             ng-class="{'target-completed': (_target_data.done > _target_data.target - 1)}"
+             ng-show="_target_data.target !== 0">
             {{ _target_data.done}} / {{ _target_data.target}}
         </div>
 
