--- a/www/menu.html
+++ b/www/menu.html
@@ -1,8 +1,9 @@
 <ons-page modifier="menu-page" id="menu_html"> 
-    <ons-row class="target-status" style="cursor: pointer;">
+    <ons-row class="target-status menu-heading" style="cursor: pointer;">
 
         <div class="left" style="padding: 0.5rem; font-size: 12pt;" 
-             ng-click="ctl_target.enter_from_menu();menu_click($event);">
+             ng-click="ctl_target.enter_from_menu();menu_click($event);"
+             ng-show"ctl_target.get_complete_percent() !== undefined">
             {{ db_profile.status.name}} 
             <br />
             {{ 'TARGET_MENU_STATUS' | translate }}
