--- a/www/target_view.html
+++ b/www/target_view.html
@@ -13,15 +13,17 @@
     <!-- ======================================= -->
 
     <ons-list modifier="inset">
-        <ons-list-item ng-repeat="data in ctl_target.status" ng-class="{completed: data.done > data.target}">
+        <ons-list-item ng-repeat="data in ctl_target.status" 
+                       ng-class="{completed: data.done > data.target}"
+                       ng-show="data.target > 0">
             <ons-row ng-init="setting = ctl_target.var.target_setting[$index]">
                 <ons-col class="title" ng-click="ctl_target.show_help(setting.key)">
-                    {{ setting.title}}
+                    {{ setting.title }}
                     <ons-icon icon="ion-ios-help-outline" fixed-width="true"></ons-icon>
                 </ons-col>
 
                 <ons-col width="50" style="text-align: right">
-                    {{ data.done}} / {{ data.target}}
+                    {{ data.done }} / {{ data.target }}
                 </ons-col>
             </ons-row>
         </ons-list-item>
