--- a/www/test_select.html
+++ b/www/test_select.html
@@ -19,7 +19,8 @@
 
         <div class="right"
              ng-init="_target_data = ctl_target.status.test_select" 
-             ng-class="{'target-completed': (_target_data.done > _target_data.target-1)}">
+             ng-class="{'target-completed': (_target_data.done > _target_data.target-1)}"
+             ng-show="_target_data.target !== 0">
             {{ _target_data.done}} / {{ _target_data.target}}
         </div>
     </ons-toolbar>
