--- a/www/note.html
+++ b/www/note.html
@@ -18,23 +18,25 @@
         </div>
     </ons-toolbar>
 
+    <!-- ==================================== -->
+
     <div class="flashcard" 
          style="margin: 0 1rem; border: 1px solid #DDD; border-radius: 4px; text-align: center;">
         {{ _learn_flashcard.q}} / {{ _learn_flashcard.a}}
     </div>
-    
+
     <div style="max-height: calc(100% - 140px); overflow-y: auto;">
         <ons-row>
             <textarea class="note textarea textarea--transparent" placeholder="撰寫筆記..."
                       ng-keyup="ctl_note.auto_grow($event)"
                       style=" margin:1rem;   padding: 1rem;  border-radius: 4px;border: 1px solid #ddd; 
-                      background-color: #f9f9f9; overflow-y: auto;width: 100%;">{{ _learn_flashcard.note }}</textarea>
+                      background-color: #f9f9f9; overflow-y: auto;width: 100%;">{{ _learn_flashcard.note}}</textarea>
         </ons-row>
 
         <ons-list modifier="inset">
             <ons-list-item 
                 ng-repeat="other_note in ctl_learn_flashcard.var.learn_flashcard.other_note" 
-                ng-click="ctl_note.copy(other_note.note)"
+                ng-click="ctl_note.copy(other_note.note, other_note.uuid)"
                 style="cursor: pointer;">
                 <span class="user" style="font-weight: bold;">
                     {{ other_note.name}}:
@@ -46,11 +48,11 @@
 
     </div>
 
-    <div class="bottom-bar bottom-bar-button" 
-         ng-click="ctl_note.submit()">
-        <div class="bottom-bar__line-height button-ok">
-            {{ "ONS_OK" | translate }}
-        </div>
-    </div>
+    <!-- ==================================== -->
+
+    <ons-tabbar>
+        <ons-tab label="{{ 'ONS_OK' | translate }}" 
+                 onclick="ctl_note.submit()"></ons-tab>
+    </ons-tabbar>
 
 </ons-page>
