--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,7 @@
 <script src="js/controller_learn_flashcard.js"></script>
 <script src="js/controller_note.js"></script>
 <script src="js/controller_notification.js"></script>
+<script src="js/controller_target_history.js"></script>
 
 <script src="js/controller_test_select.js"></script>
 
@@ -143,6 +144,7 @@ var _app_controller = function ($scope, $filter) {
     controller_note($scope);
     controller_test_select($scope);
     controller_notification($scope, $filter);
+    controller_target_history($scope);
 
     // -----------------------------------
 
